@@ -41,7 +41,9 @@ install.packages(pkgs, lib, repos = getOption("repos"),
                  contriburl = contrib.url(repos, type),
                  method, available = NULL, destdir = NULL,
 		 installWithVers = FALSE, dependencies = FALSE,
-                 type = getOption("pkgType"))
+                 type = getOption("pkgType"),
+                 configure.args = character(0),
+                 clean = FALSE)
 
 contrib.url(repos, type = getOption("pkgType"))
 }
@@ -111,6 +113,21 @@ contrib.url(repos, type = getOption("pkgType"))
     Can also be a character vector, a subset of
     \code{c("Depends", "Imports", "Suggests")}.
   }
+  \item{configure.args}{a character vector or a named list.
+      If a character vector with no names is supplied, the elements are
+      concatenated into a single string (separated by a space) and used
+      as the value for the \code{--configure-args}
+      flag in the call to \code{R CMD INSTALL}.
+      If the character vector has names, these are assumed to identify
+      values for \code{--configure-args} for individual packages.
+      This allows one to specify settings for an entire collection of packages
+      which will be used if any of those packages are installed.
+      These settings can therefore be reused and act as default settings.
+      A named list can be used also to the same effect, and that
+      allows multi-element character strings for each package
+      which are concatenated to a single string to be used as the
+      value for \code{--configure-args}.
+  }
   \item{\dots}{(for \code{new.packages}).  Arguments such as \code{destdir}
     and \code{dependencies} to be passed to \code{install.packages}.}
   \item{type}{character, indicating the type of package to download and
@@ -126,6 +143,11 @@ contrib.url(repos, type = getOption("pkgType"))
     the \sQuote{rw-FAQ}).  Value \code{"mac.binary"} can be used to
     explore and download Mac OS X binaries.
 #endif
+  }
+  \item{clean}{a logical value indicating whether to specify
+    to add the \code{--clean} flag to the call to \code{R CMD INSTALL}.
+    This is sometimes used to perform additional operations at the end
+    of the package installation in addition to removing intermediate files.
   }
 }
 \details{
@@ -258,5 +280,15 @@ contrib.url(repos, type = getOption("pkgType"))
 
   \code{\link{INSTALL}}, \code{\link{REMOVE}},
   \code{\link{library}}, \code{\link{.packages}}, \code{\link{read.dcf}}
+}
+
+\examples{
+
+\dontrun{
+  install.packages(c("XML_0.99-5.tar.gz", "../../Interfaces/Perl/RSPerl_0.8-0.tar.gz"),
+                   repos = NULL,
+                   configure.args = c(XML = '--with-xml-config=xml-config',
+                                      RSPerl = "--with-modules=no"))
+}
 }
 \keyword{utilities}
